@@ -1,5 +1,6 @@
 Version 2.02.45 - 
 ===================================
+  Rename get_vgs() to get_vgnames() and clarify related error messages.
   Allow clvmd to be built with all cluster managers & select one on cmdline.
   Mention --with-clvmd=corosync in ./configure.
   Replace internal vg_check_status() implementation.
